# OOD-X-Banchmarks

./: .gitignore  LICENSE  README.md  clip_w_local  pyproject.toml
clip_w_local/: model.py
configs/datasets/: fmow_hard.yaml  fmow_idtest_hard.yaml  fmow_idtest_x.yaml  fmow_x.yaml  imagenet_hard.yaml  imagenet_x.yaml  iwildcam_hard.yaml  iwildcam_idtest_hard.yaml  iwildcam_idtest_x.yaml  iwildcam_x.yaml
configs/trainers/CLIPN/: vit_b16.yaml
data_managment/imagenet/: download_variance.py  make_split_list.py
data_managment/wilds/: download.py
datasets/: imagenet_c_hard.py  imagenet_c_x.py  imagenet_hard.py  imagenet_r_hard.py  imagenet_r_x.py  imagenet_v2_hard.py  imagenet_v2_x.py  imagenet_x.py
datasets/wilds/: __init__.py  fmow_hard.py  fmow_idtest_hard.py  fmow_idtest_x.py  fmow_x.py  iwildcam_hard.py  iwildcam_idtest_hard.py  iwildcam_idtest_x.py  iwildcam_x.py  wilds_base_custom.py
script/: zsclip.sh
script/coop/: fmow.sh  iwildcam.sh
script/locoop/: fmow.sh  imagenet.sh
script/zsclip/: iwildcam.sh
scripts/coop/: fmow_fs_x.sh  imagenet.sh  imagenet_fs_x.sh  imagenet_x.sh  iwildcam_fs_x.sh
scripts/locoop/: fmow_fs_x.sh  imagenet.sh  imagenet_fs_x.sh  imagenet_x.sh  iwildcam.sh  iwildcam_fs_x.sh
scripts/zsclip/: fmow.sh  fmow_fs_x.sh  imagenet.sh  imagenet_fs_x.sh  imagenet_x.sh  iwildcam_fs_x.sh
src/: train.py
trainers/: coop.py  locoop.py  trainer_templete.py  zsclip.py
trainers/modules/: locoop.py  zsclip.py
trainers/trainer_base/: ood_trainier_base.py
utils/: datasets.py  evaluation.py  plot.py
(+11 files in other folders)
