[tool.poetry]
name = "ood-x-banchmarks"
version = "0.1.0"
description = ""
authors = ["hoshi23"]
readme = "README.md"
packages = [
    { include = "trainers"},
    { include = "datasets"},
    { include = "utils"},
    { include = "clip"},
    { include = "dassl", from = "third_party/Dassl.pytorch" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
torchvision = "^0.19.0"
tqdm = "^4.66.4"
scipy = "^1.14.0"
ftfy = "^6.2.0"
regex = "^2024.7.24"
seaborn = "^0.13.2"
yacs = "^0.1.8"
tensorboard = "^2.17.0"
gdown = "^5.2.0"
wilds = "^2.0.0"
pillow = "^10.4.0"
transformers = "^4.44.0"
matplotlib = "^3.9.2"
pandas = "1.5.3"
numpy = "1.26.4"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"